--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -110,7 +110,7 @@ else()
     add_executable(rtorrent_test ${RTORRENT_TEST_SRCS})
     find_package(Threads REQUIRED)
     include_directories(${GTEST_INCLUDE_DIRS})
-    target_link_libraries(rtorrent_test rtorrent_common ${GTEST_LIBRARIES} Threads::Threads)
+    target_link_libraries(rtorrent_test rtorrent_common ${GTEST_LIBRARIES} uSockets z Threads::Threads)
     gtest_discover_tests(rtorrent_test)
   endif()
 endif()
